mse a jour du fichier Jenkins