@@ -76,17 +76,20 @@ pipeline {
             steps {
                 echo '📦 Création de l’installateur .rpm...'
                 sh '''
-                    mkdir -p dist
-                    jpackage \
-                      --type rpm \
-                      --input target \
-                      --dest dist \
-                      --name CalculatriceDEEVEN \
-                      --main-jar ${JAR_NAME} \
-                      --main-class com.example.CalculatriceApp \
-                      --icon icon.png \
-                      --linux-shortcut \
-                      --verbose
+                  mkdir -p dist
+
+                  jpackage \
+                    --type rpm \
+                    --input target \
+                    --dest dist \
+                    --name CalculatriceDEEVEN \
+                    --main-jar calculatrice-1.0.0-jar-with-dependencies.jar \
+                    --main-class com.example.CalculatriceApp \
+                    --icon icon.png \
+                    --linux-shortcut \
+                    --add-modules javafx.controls,javafx.fxml \
+                    --verbose
+
                 '''
             }
         }
